--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Waka's Blog</title>
+</head>
+<body>
+
+<!--<script src="//unpkg.com/vue@2.1.10/dist/vue.min.js"></script>-->
+<script src="js/vue.js"></script>
+</body>
+</html>
