--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Waka's Blog</title>
+    <!--material design 的字体和图标-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <!--bootstrap-->
+    <link rel="stylesheet" href="library/bootstrap-3.3.7-dist/css/bootstrap.min.css">
+
 </head>
 <body>
 
-<!--<script src="//unpkg.com/vue@2.1.10/dist/vue.min.js"></script>-->
-<script src="js/vue.js"></script>
+<!--bootstrap-->
+<script src="library/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
+<!--Vue.js-->
+<script src="library/vue/vue.js"></script>
 </body>
 </html>
