--- a/index.html
+++ b/index.html
@@ -2,15 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Waka's Blog</title>
     <!--material design 的字体和图标-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <!--bootstrap-->
     <link rel="stylesheet" href="library/bootstrap-3.3.7-dist/css/bootstrap.min.css">
-
+    <style>
+        header {
+            height: 500px;
+            background: #2aabd2;
+        }
+    </style>
 </head>
 <body>
+
+<header>
+
+</header>
 
 <!--bootstrap-->
 <script src="library/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
