--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <!--bootstrap-->
     <link rel="stylesheet" href="library/bootstrap-3.3.7-dist/css/bootstrap.min.css">
     <style>
+        h1 {
+            margin: 0;
+            padding: 0;
+        }
+
         header {
             height: 500px;
             background: #2aabd2;
@@ -19,7 +24,7 @@
 <body>
 
 <header>
-
+    <h1>欢迎来到waka的博客</h1>
 </header>
 
 <!--bootstrap-->
