--- a/index.html
+++ b/index.html
@@ -1,16 +1,165 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>index</title>
+    <title>h5预览编辑页</title>
+    <!--引入样式-->
+    <link rel="stylesheet/less" href="/stylesheets/h5_preview_edit.less"/>
+    <!--引入 less 解析-->
+    <script src="/library/less/less.min.js"></script>
 </head>
+
 <body>
-<section>
-    <header></header>
-    <section>
+
+<section id="app" class="app">
+
+    <!--预览-->
+    <section class="preview">
+        <!--图片-->
+        <div :class="left.img.class" :style="{backgroundImage: 'url('+left.img.src+')'}" @click="imgClick">
+        </div>
+        <!--文字-->
+        <div :class="left.text.class" @click="textClick">
+            {{left.text.text}}
+        </div>
+        <!--列表-->
+        <ul class="list">
+            <!--项-->
+            <li v-for="(item,index) in left.list" :class="item.class" @click="listItemClick(item,index)">
+                <img width="30" :src="item.iconSrc" alt="">
+                <span>{{item.text}}</span>
+                <span>{{item.rightText}}</span>
+            </li>
+        </ul>
+    </section>
+
+    <!--右侧-->
+    <section class="right">
+        <section style="margin-bottom: 20px">当前选中DOM：{{currentSelectedDom}}</section>
+
+        <!--更改图片-->
+        <section v-if="currentSelectedDom==='img'">
+            <label for="changeImg">
+                更换图片<input name="changeImg" type="text" v-model="newImgSrc">
+            </label>
+            <button @click="saveImg">保存</button>
+        </section>
+
+        <!--更改文本-->
+        <section v-if="currentSelectedDom==='text'">
+            更换文本
+            <textarea name="changeText" v-model="newText"></textarea>
+            <button @click="saveText">保存</button>
+        </section>
 
     </section>
 </section>
+
 </body>
-<script src="library/vue.js"></script>
+
+<script src="/library/vue/vue.js"></script>
+<script>
+    window.onload = function () {
+        var app = new Vue({
+            el: '#app',
+            data: {
+                // 当前选中 dom
+                currentSelectedDom: '',
+                // 左侧 preview
+                left: {
+                    // 图片
+                    img: {
+                        // 类
+                        class: {
+                            pointer: true,
+                            img: true,
+                            border: false,
+                        },
+                        src: 'https://gss1.bdstatic.com/9vo3dSag_xI4khGkpoWK1HF6hhy/baike/w%3D268%3Bg%3D0/sign=28cc2f9032c79f3d8fe1e336829aaa2c/6a63f6246b600c3366b5b4a7134c510fd8f9a195.jpg'
+                    },
+                    // 文本
+                    text: {
+                        class: {
+                            pointer: true,
+                            text: true,
+                            border: false,
+                        },
+                        text: '《魔兽世界》（World of Warcraft）是由著名游戏公司暴雪娱乐所制作的第一款网络游戏，属于大型多人在线角色扮演游戏。游戏以该公司出品的即时战略游戏《魔兽争霸》的剧情为历史背景，依托魔兽争霸的历史事件和英雄人物，魔兽世界有着完整的历史背景时间线。[1]  玩家在魔兽世界中冒险、完成任务、新的历险、探索未知的世界、征服怪物等。'
+                    },
+                    // 列表
+                    list: [
+                        {
+                            class: {
+                                item: true,
+                                border: false,
+                            },
+                            iconSrc: 'http://www.easyicon.net/api/resizeApi.php?id=1190108&size=128',
+                            text: '文字文字文字',
+                            rightText: '右侧文字'
+                        },
+                        {
+                            class: {
+                                item: true,
+                                border: false,
+                            },
+                            iconSrc: 'http://www.easyicon.net/api/resizeApi.php?id=1190113&size=128',
+                            text: '文字文字文字',
+                            rightText: '右侧文字'
+                        },
+                    ]
+                },
+                // 新图片地址
+                newImgSrc: '',
+                // 新文本
+                newText: '',
+            },
+            methods: {
+                // img 点击
+                imgClick: function () {
+                    this.clearAllBorder();
+                    this.left.img.class.border = true;
+                    this.currentSelectedDom = 'img';
+                },
+                // text 点击
+                textClick: function () {
+                    this.clearAllBorder();
+                    this.left.text.class.border = true;
+                    this.currentSelectedDom = 'text';
+                },
+                // 列表项点击
+                listItemClick: function (item, index) {
+                    this.clearAllBorder();
+                    this.left.list[index].class.border = true;
+                    this.currentSelectedDom = 'listItem' + index;
+                },
+                // 清除所有 border
+                clearAllBorder: function () {
+                    this.currentSelectedDom = '';
+                    this.left.img.class.border = false;
+                    this.left.text.class.border = false;
+                    this.left.list.forEach(function (item) {
+                        item.class.border = false;
+                    });
+                },
+                // 保存图片
+                saveImg: function () {
+                    if (!this.newImgSrc) {
+                        alert('请输入图片地址');
+                        return;
+                    }
+                    this.left.img.src = this.newImgSrc;
+                },
+                // 保存文本
+                saveText: function () {
+                    if (!this.newText) {
+                        alert('请输入文本');
+                        return;
+                    }
+                    this.left.text.text = this.newText;
+                }
+            }
+        });
+    };
+</script>
 </html>
