--- a/pages/linear-gradient-demo.html
+++ b/pages/linear-gradient-demo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>linear-gradient</title>
+    <title>线性变化Demo</title>
     <style>
         .a {
             border: 1px solid red;
