--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>maxine</title>
     <link rel="stylesheet" href="/static/css/reset.css">
-    <link rel="stylesheet/less" href="./maxine.less">
+    <link rel="stylesheet/less" href="/static/pages/maxine/maxine.less">
     <!-- swiper -->
     <link rel="stylesheet" href="/static/library/swiper/swiper.min.css">
     <!-- less -->
@@ -120,6 +120,6 @@
 <!-- <script src="/static/library/vue/vue.min.js"></script> -->
 <!-- swiper -->
 <script src="/static/library/swiper/swiper.min.js"></script>
-<script src="./maxine.js"></script>
+<script src="/static/pages/maxine/maxine.js"></script>
 
 </html>
