--- a/static/pages/maxine/maxine.html
+++ b/static/pages/maxine/maxine.html
@@ -106,6 +106,10 @@
         </ul>
     </section>
 
+    <section v-show="tabSelected === 3" class="study">
+
+    </section>
+
     <!-- footer -->
     <footer class="footer">
         <div class="title">{{footer.title}}</div>
