--- a/index.html
+++ b/index.html
@@ -1,125 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="UTF-8">
-    <title>maxine</title>
-    <link rel="stylesheet" href="/static/css/reset.css">
-    <link rel="stylesheet/less" href="/static/pages/maxine/maxine.less">
-    <!-- swiper -->
-    <link rel="stylesheet" href="/static/library/swiper/swiper.min.css">
-    <!-- less -->
-    <script src="/static/library/less/less.min.js"></script>
-</head>
-
-<body>
-
-<section id="page">
-
-    <!-- header -->
-    <header class="header">
-        <div class="img-left" :style="{'background-image':'url('+header.imgSrc+')'}"></div>
-        <div class="right">
-            <h1 class="title">{{header.title}}</h1>
-            <h2 class="sub-title">{{header.subTitle}}</h2>
-        </div>
-    </header>
-
-    <!-- tabs -->
-    <ul class="tabs">
-        <li v-for="(item, index) in tabs" :key="item.id"
-            :class="tabSelected === item.id ? 'tab-item-selected':'tab-item'" @click="onTabClick(item)">
-            {{item.text}}
-        </li>
-    </ul>
-
-    <!-- index -->
-    <section v-show="tabSelected === 0" class="index">
-        <!-- 轮播 -->
-        <div class="swiper-container">
-            <!-- Additional required wrapper -->
-            <div class="swiper-wrapper">
-                <!-- Slides -->
-                <div v-for="(item, index) in index.banners" :key="index" class="swiper-slide"
-                     :style="{'background-image':'url('+item.imgSrc+')'}"></div>
-            </div>
-            <!-- 轮播点 -->
-            <div class="swiper-pagination"></div>
-        </div>
-        <!-- 卡片们 -->
-        <template v-for="(item, index) in index.cards">
-            <!-- 视频卡 -->
-            <section v-if="item.type==='video'" class="video-card">
-                <h2 class="title">{{item.title}}</h2>
-                <h3 class="sub-title">{{item.subTitle}}</h3>
-                <!--<video class="video" :src="item.videoSrc"></video>-->
-                <div class="img" :style="{'background-image':'url('+item.imgSrc+')'}"></div>
-                <div class="bottom">
-                    <span>{{item.bottomInfo}}</span>
-                </div>
-            </section>
-            <!-- 新闻卡 -->
-            <section v-if="item.type==='news'" class="news-card">
-                <h2 class="title">{{item.title}}</h2>
-                <ul class="imgs">
-                    <li class="img-item" v-for="(item2, index2) in item.imgs" :key="index2" class="img-item">
-                        <div class="img" :style="{'background-image':'url('+item2.imgSrc+')'}"></div>
-                        <ul class="texts">
-                            <li v-for="(item3, index3) in item2.texts" :key="index3" class="text-item">{{item3}}</li>
-                        </ul>
-                    </li>
-                </ul>
-            </section>
-        </template>
-    </section>
-
-    <!-- 历史 -->
-    <section v-show="tabSelected === 1" class="history">
-        <!-- 卡片们 -->
-        <template v-for="(item, index) in history.cards">
-            <section v-if="item.type === 'img-content'" class="img-content-card">
-                <div class="wrapper">
-                    <div class="img-left" :style="{'background-image':'url('+item.imgSrc+')'}"></div>
-                    <div class="right">
-                        <h2 class="title">{{item.title}}</h2>
-                        <p class="content">{{item.content}}</p>
-                    </div>
-                </div>
-            </section>
-        </template>
-    </section>
-
-    <!-- 菜单 -->
-    <section v-show="tabSelected === 2" class="menu">
-        <div class="big-img" :style="{'background-image':'url('+menu.bigImgSrc+')'}">
-            <div class="area">
-                <div class="title">{{menu.title}}</div>
-                <div class="sub-title">{{menu.subTitle}}</div>
-            </div>
-        </div>
-        <ul class="foods">
-            <li v-for="(item, index) in menu.foods" class="food-item">
-                <div class="divider"></div>
-                <h2 class="title">{{item.title}}</h2>
-                <img :src="item.imgSrc" alt="">
-            </li>
-        </ul>
-    </section>
-
-    <!-- footer -->
-    <footer class="footer">
-        <div class="title">{{footer.title}}</div>
-        <div v-for="(item, index) in footer.infos" :key="index" class="info-item">{{item}}</div>
-    </footer>
-
-</section>
-</body>
-
-<!-- vue -->
-<script src="/static/library/vue/vue.js"></script>
-<!-- <script src="/static/library/vue/vue.min.js"></script> -->
-<!-- swiper -->
-<script src="/static/library/swiper/swiper.min.js"></script>
-<script src="/static/pages/maxine/maxine.js"></script>
-
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><title>maxine</title><link rel=stylesheet href=//at.alicdn.com/t/font_464704_on25hvs1tw3ik9.css><link href=/static/pages/maxine/dist/static/css/app.e923d9d61e8fa5e1d37e2a7a82c8dba6.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/pages/maxine/dist/static/js/manifest.0031050f046a9a074446.js></script><script type=text/javascript src=/static/pages/maxine/dist/static/js/vendor.5ec83198b9e2d99e7963.js></script><script type=text/javascript src=/static/pages/maxine/dist/static/js/app.6666c22b58d4881b1765.js></script></body></html>
