--- a/static/pages/maxine/maxine.html
+++ b/static/pages/maxine/maxine.html
@@ -29,7 +29,7 @@
     <ul class="tabs">
         <li v-for="(item, index) in tabs" :key="item.id"
             :class="tabSelected === item.id ? 'tab-item-selected':'tab-item'" @click="onTabClick(item)">
-            {{item.text}}
+            {{item.text}} 123
         </li>
     </ul>
 
