--- a/static/pages/resume/resume.html
+++ b/static/pages/resume/resume.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>resume</title>
-    <link href="../css/reset.css" rel="stylesheet">
-    <link href="../css/resume.css" rel="stylesheet">
+    <link href="../../css/reset.css" rel="stylesheet">
+    <link href="./resume.css" rel="stylesheet">
 </head>
 <body>
 <section class="main">
@@ -85,7 +85,7 @@
     </section>
 
 </section>
-<script src="../library/vue.js"></script>
+<script src="../../library/vue/vue.js"></script>
 <script>
     var vm = new Vue({
         el: '.main',
@@ -152,7 +152,7 @@
                 },
                 {
                     company: '正益移动互联科技股份有限公司（AppCan）',
-                    job: '前端开发工程师',
+                    job: '前端/Android开发工程师',
                     city: '北京',
                     beginTime: '2015.10',
                     endTime: '2017.03.24',
